jisu-was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jisu-was
  name: jisu-was
  namespace: jisu-was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jisu-was
  template:
    metadata:
      labels:
        app: jisu-was
    spec:
      containers:
      - image: 559394926122.dkr.ecr.ap-northeast-2.amazonaws.com/jisu:was_apache_0.2v
        name: nginx
        volumeMounts:
        - name: was-pv
          mountPath: /data
      volumes:
      - name: was-pv
        persistentVolumeClaim:
          claimName: was-claim
